--- a/src/App.css
+++ b/src/App.css
@@ -117,7 +117,6 @@ h1 {
 
 .holiday {
   margin-top: 4vw;
-  border: 0.4vw solid #99bde0;
   border-radius: 2vw;
   padding: 2.5vw;
   background-color: #e6ecf3;
@@ -212,13 +211,15 @@ h1 {
   padding: 1vw 4vw;
 }
 
+.status-item {
+  border: 0.1vw solid #3b3b3b;
+}
+
 .status {
   display: grid;
   border-radius: 2vw;
   margin-top: 4vw;
   grid-template-columns: auto auto;
-  grid-gap: 0.2vw;
-  background-color: #3b3b3b;
   border: 3vw solid #f3f3f3;
 }
 
